# choicerank

./: .env  .gitignore  Cargo.toml  TODO.md  schema.sql
front/: choices.html  index.html  new.html  results.html
src/: ballot.rs  main.rs  results.rs  state.rs  vote.rs
templates/: ballot.html  results.html  vote.html
