[package]
name = "choicerank"
version = "0.1.0"
edition = "2021"

[dependencies]
shuttle-tide = "0.24.0"
shuttle-runtime = "0.24.0"
tokio = "1.26.0"
tide = "0.16.0"
shuttle-static-folder = "0.24.0"
serde = { version = "1.0.183", features = ["derive"] }
shuttle-aws-rds = { version = "0.24.0", features = ["postgres"] }
sqlx = { version = "0.7.1", features = ["runtime-tokio-native-tls", "postgres"] }
askama = "0.12.0"
